<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    tools:context=".ui.news.ArticleDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <ImageView
                android:id="@+id/image_view_details"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="32dp"
                android:contentDescription="@string/article_image"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_view_favorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:clickable="true"
                android:focusable="true"
                android:minHeight="48dp"
                android:text="@string/add_to_favorites"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/text_view_details_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/title"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_details_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/author"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/text_view_details_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/date"
                    android:textAlignment="textStart"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />
            </LinearLayout>

            <TextView
                android:id="@+id/text_view_details_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:text="@string/source"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            <TextView
                android:id="@+id/text_view_details_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/description"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/text_view_details_url"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:autoLink="web"
                android:text="@string/read_the_full_story_here_n"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Small" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>