<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="cohen.dafna.newsassignment.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_news"
            app:destination="@id/navigation_news" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="cohen.dafna.newsassignment.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_navigation_news_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
        <action
            android:id="@+id/action_navigation_news_to_articleDetailsFragment"
            app:destination="@id/articleDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="cohen.dafna.newsassignment.ui.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites">
        <action
            android:id="@+id/action_navigation_favorites_to_articleDetailsFragment"
            app:destination="@id/articleDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/articleDetailsFragment"
        android:name="cohen.dafna.newsassignment.ui.news.ArticleDetailsFragment"
        android:label="fragment_article_details"
        tools:layout="@layout/fragment_article_details">
        <action
            android:id="@+id/action_articleDetailsFragment_to_navigation_favorites"
            app:destination="@id/navigation_favorites" />
    </fragment>
</navigation>